# proPTV_OpenPTV_MyPTV_comparison

./: .gitignore  LICENSE  README.md  comparison_of_all_lines_of_sight.ipynb  convert_openptv_lineofsight_notebooks.sh  environment.yml  from_proPTV_to_OpenPTV.ipynb  markers_c0.txt  markers_c3.txt  myptv_lineofsight_from_openptv.ipynb  planes_csv_to_single_csv.ipynb  proPTV_to_OpenPTV.py  projection_comparison.ipynb  pyproject.toml  read_ptv_is_convert_to_proPTV.ipynb
MyPTV_LineOfSight/: ExtendedZolof_calibration_errors_data  MyPTV_LineOfSight.ipynb  Tsai_calibration_errors_data
OpenPTV_LineOfSight/: comparison_of_all_lines_of_sight.ipynb  convert_cases_to_fix_and_crd.ipynb  convert_cases_to_fix_and_crd_nb.py  create_synthetic_images.ipynb  create_synthetic_images_nb.py  difference_openptv.csv  from_proPTV_to_OpenPTV_nb.py  generate_error_openptv.ipynb  generate_images_multi_plane.ipynb  generate_new_planes.ipynb  loadTracks_nb.py  manual_openptv_orientation_from_opencv_pipeline.ipynb  manual_openptv_orientation_from_opencv_pipeline_nb.py  move_plane2_points.ipynb  multiview_calibration.ipynb  multiview_calibration.py  multiview_calibration_nb.py  multiview_calibration_optv.ipynb  myptv_lineofsight_from_openptv.ipynb  openptv_3D_error.ipynb  openptv_3D_errors.ipynb  openptv_calibration_using_Robin_markers (copy).ipynb  openptv_calibration_using_Robin_markers.ipynb  openptv_errors_allmarkers.txt  openptv_errors_extrapolation.txt  openptv_errors_interpolation.txt  openptv_image_to_3D_error.ipynb  openptv_image_to_3D_error_nb.py  openptv_lineofsight.ipynb  openptv_lineofsight_nb.py  optv_calibration_using_Robin_markers.ipynb  optv_calibration_using_Robin_markers_nb.py  planes_csv_to_single_csv_nb.py  rename_dumbbell_tiff.sh  rename_files_multiplane.ipynb  (+4 more)
(+161 files in other folders)
