[tool.poetry]
name = "proptv-openptv-myptv-comparison"
version = "0.1.0"
description = ""
authors = ["Alex Liberzon <alexlib@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
plotly = "^5.19.0"
numpy = "^1.26.4"
scipy = "^1.12.0"
jupyter = "^1.0.0"
openptv-python = {git = "https://github.com/openptv/openptv-python"}
myptv = {git = "https://github.com/ronshnapp/myptv"}
jupyterlab = "^4.1.4"
ipykernel = "^6.29.3"
matplotlib = "^3.8.3"
numba = "^0.59.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
